@@ -2,11 +2,11 @@ DIST 0001-block-cgroups-kconfig-build-bits-for-BFQ-v7r7-3.19.patch1 3339 SHA256 
 DIST 0002-block-introduce-the-BFQ-v7r7-I-O-sched-for-3.19.patch1 224820 SHA256 621d4877d992f353ec6d9f977377552077aeebe85c47e65716e99d699af5cb11 SHA512 04cd37e2043c32e27406720a12212227fd307c67024e27127386e9c6f20e8fdd04c1a423b334cc41868dac935de0c8e59ef2220bddbb4b1e47f4e6c115bf0091 WHIRLPOOL 07b547aae8cbf61324837b9bab1c6829d6c478210f67a751cd10fd1bd0ba77a4210fcc5bad3dec8f4ea71714a4a87446003d354bc07b1bb8208d1ac24bfbe335
 DIST 0003-block-bfq-add-Early-Queue-Merge-EQM-to-BFQ-v7r7-for-3.19.0.patch1 42435 SHA256 1509740239a2f5b623bc05b3b9efbfd4e2fa75029503e0770a274f7e7c59d79f SHA512 5298979067a41dc6506a08664ef70fc3d9ef5155a1ac6a7cc65e050282498d3451aa3077028c05d97e9467ee7d083ce45606ab2582558a26a2cc95c8b6cbfa81 WHIRLPOOL f8e1b324dfb05cf50d258b5739e21e29977656aabcdb22dd4817044d5ac7a146d2bd00226e5b37d3189f2b9d889f549ba4b8bef89088f8b883da1cb160c89854
 DIST README-v7r7-0.BFQ 21937 SHA256 d53e830875c98294b14311d19422e0fa039658eff2261ffa71d678c578b7fe81 SHA512 639d69e73eace76ed2415ce040f66bbf16fce3acf274409c35b434d0baaed42b80fec84226e345c162f0b5825986787f99895291b9fdac54eb6245f57be84f9c WHIRLPOOL 530fd3cbb16903ba7e64d674579713d3e6c17a98c051ffa0b9dd63bb2f3da82f7d574d24ce28ab79252e750418caf41c6951cf8961ac0b10ce39729df47813aa
-DIST aufs-sources-3.19_p20150330.tar.xz 164160 SHA256 5d83dd12c22302da1b4dc551f3ffcc38facbb0274dc234c6224ea7987ed14f76 SHA512 af8f182bcc6c076daa70b69606a5340e8dba7273db28fa310938130181c33e00681ee57f96712032c558846182f43ca6def2a53da9c8cea25d274bba7c66e45a WHIRLPOOL b08d0efc5231a08301c2d337ab69d3d4f72ce2f5712caef20a76fef912a2bd3c3f514378cb3f185f38c628cae5dd4da75dd93bb2b0779dc99ade6eae3e4e5441
+DIST aufs-sources-3.19_p20150406.tar.xz 164156 SHA256 a657ec22cb8686f17dc680119180dddec8253d4752f79d750d5758c6f6a64319 SHA512 b417a8e0d32c9f2a81f202f41ff3dab1310678ce50dd349390a94c89d74279eb2e255fccc27e50429ff4a12da14a0d1fe7bad3e5cc83d70be98c9f49c5e567ec WHIRLPOOL 7d585c16a63dde65760694d42058f30d96bd182152473b96b493253601ba44d52af302dabf54327ea90215d32866c3caf3c0396cddcf23bf87bc76d1ed6bc871
 DIST deblob-3.19 129098 SHA256 b0e121e80f02676bc023df1470691b94bd0495ae09aa349d1e6edddf7d1b34a2 SHA512 8f9327d5bb56fbc24f72622d579232003db95695c0cd22b4ce0b4692c9757b639c1253548d943f7cbdde9652cf51814f4b4fdf92055e8ae1c9d75acdc68d9a32 WHIRLPOOL bc3ed9eeec3ab77e2f18ec4a2a536a58b4bf2091a50219220c4d1d21de6956709c97dbb098eba64eacb2fac45f410020f6c37a3f890e6e820d5d8faebc3f3b3c
 DIST deblob-check-3.19 659945 SHA256 df5a9b11b095b0d8c3204c9b24118d77689900fc4ef4c3256b13fe86aee0d185 SHA512 f7fc86ebc8e1c61c16d7ce6831368832862346522676b65f4702c77bb2e9b08691f2c67cf88e92929908d5300d53913e7e5365baf3378b1cbe3aca59ec80c672 WHIRLPOOL e5e33da007c07af4ca5713d583f992d9da8c6745761e1956a246de429a44aa972a94cc1db51e67d0ba1aad9b8476ef694d846e8157a85411bcbc1809f20f633a
-DIST genpatches-3.19-4.base.tar.xz 149032 SHA256 c3d23689206a7c5d3c851424ca38edfd903e0aaf31aa607f5d9c82108ae4ae59 SHA512 dc78e638b242bcc93deb1f7ca50843e02cb4904d850031867ce2fd00a0ee1fefc4e3657fde2a4d2647606607abf935b15fba1f86d4f0011230eff24a83f0f670 WHIRLPOOL 147fb303afd8694b1da45b8e7cecab186c1d739c4b3ea5f5fe744f233008b1bb7b52d2b5911ca8eb2a6d99df2fa25e27992d03853dcfa352526453bf71670d68
-DIST genpatches-3.19-4.extras.tar.xz 16280 SHA256 6c5a7b4dc060f733c5178e5c7bb850304ec63d25cadff2e74b2592cb682750a8 SHA512 01a57204e66e3e5a78dbf1f37c3e5a037799f2b2f5264b2fbf4de0aa3c1cf0aefecc9c672d9432c2d6329b50aaeb322894b465b7a9614ea97d0853bf02739366 WHIRLPOOL cfc00e8f11985d137ad599870c62b77742176b4f7df951e676bab81b8791707db35b3e3c0320cb56ab27e7e13dfca82904be257e0cec7a43bfbb7bff6b6d6b1e
+DIST genpatches-3.19-5.base.tar.xz 169448 SHA256 2703ff315840efbd78a2de93b46954961776c0e60a35ebb59f0d0a86fc343722 SHA512 b82d177378fc7d29bffc89f24e6471dbdba176794ae48ecec5c7419279ab8c955becb49a22edea20a5bd02352e4d87cba16597db18ea5364d12399c5ffcce76c WHIRLPOOL 225ade3329708f739f37b04ec4bdeb8e98fe0e07fa253d5f67e5b1a659f91a35454dd339644f28de300a5dd5a56f088d5b077b61f588d9f0b1847cd56a932434
+DIST genpatches-3.19-5.extras.tar.xz 16276 SHA256 1fc718e10dfdfedbaeb896c60c5cfe95c7d1fe4af23de8596a467c309ddcb18a SHA512 7a866aadf905cd463a527e517021bc5060045f7c3b9fb82d0031b399fbd8d9b69db15547ec8ee6eb9e9fd81ca6613a1fe9d2cfed74f474884f42e15eafc8b487 WHIRLPOOL 2c2eeb44761bfb01de861acd58df12bdf5ad339eeec825cd0b9669f5287bc73e38cfbcc6aa904ae222b68514fe736aa33ffe5db2c3dab75dedc93493600caa17
 DIST lh-logo_linux_320_240_clut224.ppm 58367 SHA256 9692bfdd2257ae5131ac14eb6f34386416ec228be68a4bb02381378876e34812 SHA512 18cd56961a81f4ca87933859a35d84af86602f480a6b92dbb3c2f4a9b83abb7023c64939bc781bbe7f9e8e105df508698a66790909f9144fb99c1e347ccf22de WHIRLPOOL 66933acfce018d07d9d70dbfd56155bb23f7fdccb2295c28100165d6c8c14194556bdadf66b119f42db1d700d1ce5bf2eeca17f44c26582bb13656d166c055e8
-DIST lh-sources-kernel-d4f67618772bf873192a77c9fba303d9663d1e65.patch 16962 SHA256 e5b0f1882861cb1d0070e49c41a3e7390cf379f183be0bddb54144ecc68fb8f9 SHA512 bc98c5c3ccc6edc97adf44920e679dbcbca4664a847ee1475d6da39d5b0eadfd5bf1659856e9ee024ca038ca4481f22ddf61aee7a2e44990900f297f751a2cef WHIRLPOOL 5daba65cd56e556bd3088dce43c77af1eeb0fe8bf735654abcc4c5cf1516fd5ca7952cb2dbb3ba19c3a69aa0feff1b276af7323f2839e42de28285de5ddceed0
+DIST lh-sources-kernel-aab465c93f3c91adf5a2560d84580db662f9fa1c.patch 16963 SHA256 ca7e13dc12f16418397e2d855a66f08605a4aeaf229624d25f1e5a564db60165 SHA512 5f19e1dd032f78dd2bf479e96c65167044e9c78955849f90d8586fb3f1e5dc7b645129c8748ea8ffa116a653d0683876b4533a1c23e0a1015b44067c007e788a WHIRLPOOL c1479f3a4b3170fc1e00bc2b9678278ae6757c0ef3743ce161aa462efb070786464702d53016c540d5bf3dc48710e3dbe2516a2b7a10c6c3e6f177156c6d80e2
 DIST linux-3.19.tar.xz 81688872 SHA256 be42511fe5321012bb4a2009167ce56a9e5fe362b4af43e8c371b3666859806c SHA512 d77bfd9b1cd524ac50bb5a93808955be2f9bcd2ec0badcc8aa6a63401e212f891fd14bd27c6441174ba5d70ab875b9e76c7ebc95f046e31aff1d40790d30351c WHIRLPOOL 76a17bb3d7c30cee19e135940f3607106efb2984061f946f0da9a2ddd602dc1bfc7e6f8970975cfb113d13f23a75415f39938204af266e2819e7a239b6f46778
